[package]
name = "refterm-aes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
srng = { path = "./lib/srng" }
simd_aes = { path = "./lib/simd_aes" }

[[bin]]
name = "refterm-aes"
path = "main.rs"
