[package]
authors = ["Igor null <m1el.2027@gmail.com>"]
name = "refterm-hash-break"
license = "GNU General Public License v2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
srng = { path = "./lib/srng" }
simd_aes = { path = "./lib/simd_aes" }

[[bin]]
name = "refterm-hash-break"
path = "main.rs"
